# astra_descriptions

./: README.md
arm_description/: package.nix  package.xml  setup.py
arm_description/config/: display.rviz
arm_description/launch/: display.launch.py
arm_moveit_config/: package.nix  package.xml
arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
core_description/: package.nix  package.xml  setup.py
core_description/config/: display.rviz  ekf.yaml
core_description/launch/: display.launch.py  robot_state_publisher.launch.py
core_description/urdf/: core_rover.urdf
core_gazebo/: CMakeLists.txt  package.nix  package.xml
core_gazebo/config/: ros_gz_bridge.yaml
core_gazebo/launch/: core.gazebo.launch.py
