<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>core_description</name>
  <version>1.0.0</version>
  <description>This package contains configuration data, 3D models and launch files for Clucky Core</description>
  <maintainer email="ds0196@uah.edu">David Sharpe</maintainer>
  <license>AGPL-3.0-only</license>

  <depend>rclpy</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>geometry2</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
