<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>core_gazebo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ds0196@uah.edu">David</maintainer>
  <license>AGPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ros2_control</depend>
  <depend>diff_drive_controller</depend>
  <depend>controller_manager</depend>
  <depend>common_interfaces</depend>
  <depend>xacro</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>geometry2</exec_depend>
  <exec_depend>ros_gz</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
